--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas==2.0.0
-requests==2.28.0
-beautifulsoup4==4.11.0
-urllib3==1.26.0
-plotly==5.15.0
+pandas>=2.0.0
+requests>=2.28.0
+beautifulsoup4>=4.11.0
+urllib3>=1.26.0
+plotly>=5.15.0
